# freetrade-task

./: .gitignore  README.md
.github/workflows/: ci.yml
deploys/docker-compose/: docker-compose.yaml
deploys/k8s/: freetrade-faker-job.yaml
freetrade/: .env.freetrade  Dockerfile  Makefile  pyproject.toml  run-docker-image.sh  test.csv
freetrade/freetrade/: __init__.py  api_handler.py  etl.py  gcs.py  logger.py  models.py  setup.py
freetrade/tests/: __init__.py  test_api_handler.py  test_gcs.py  test_models.py
